# gmcore

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Makefile  README.md  vcpkg.json
examples/: 01_hello.lua  02_rect.lua  03_rect_move.lua  04_noise.lua  05_blit.lua  05_dump.lua  06_noise_blit.lua  07_circle.lua
examples/01_hello/: game.lua
examples/02_rect/: game.lua
examples/03_rect_move/: game.lua
examples/04_noise/: game.lua
examples/05_blit/: game.lua
examples/06_noise_blit/: game.lua
examples/07_circle/: game.lua
examples/08_noloop/: game.lua
examples/09_screenshot/: game.lua
src/: gfxlc_console.c  gfxlc_console.h  gfxlc_context.h  gfxlc_fps.c  gfxlc_fps.h  gfxlc_lua.c  gfxlc_lua.h  gfxlc_luabind.c  gfxlc_luabind.h  gfxlc_util.c  gfxlc_util.h  gm_console.c  gm_console.h  gm_context.h  gm_fps.c  gm_fps.h  gm_lua.c  gm_lua.h  gm_util.c  gm_util.h  main.c
